# home

./: first.ts  main.py  pyproject.toml  spiro.py
colors/: colors.json  colors.py  colors.toml  colors_input.json  spiro.py
sudoku/: __init__.py  input_grids.py  solver.py
sudoku/output/: easy_solved.csv  hard_solved.csv  impossible_failed.csv  impossible_solved.csv  medium_solved.csv  solver_logs.txt  superhard_solved.csv  test_failed.csv  test_solved.csv  zeros_solved.csv
utils/: __init__.py  notate.py
